feat: add memory to the agents prompt